Finish forecasting section

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ format:
   html:
     comments:
       hypothesis: true
+    page-layout: full
   docx:
     output-file: report-malyukov-bass
     output-ext: docx
